# FastVGGT

./: README.md  pyproject.toml
eval/: eval_7andN.py  eval_custom.py  eval_custom_colmap.py  eval_scannet.py
src/merging/: merge.py
src/vggt/models/: aggregator.py
