[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "fastvggt"
version = "0.1.0"
description = "Python package for FastVGGT model code and evaluation utilities."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE.txt" }
authors = [
  { name = "FastVGGT contributors" },
]
dependencies = [
  "einops",
  "huggingface_hub",
  "matplotlib",
  "numpy==1.26.1",
  "Pillow",
  "safetensors",
  "torch==2.3.1",
  "torchvision==0.18.1",
  "tqdm",
]

[project.optional-dependencies]
eval = [
  "evo",
  "open3d",
  "opencv-python",
  "pyceres",
  "pycolmap==3.10.0",
  "PyYAML",
  "scikit-image",
  "scipy",
  "trimesh",
]

[project.urls]
Homepage = "https://github.com/mystorm16/FastVGGT"
Repository = "https://github.com/mystorm16/FastVGGT"

[tool.hatch.build.targets.wheel]
packages = ["src/merging", "src/vggt"]

[tool.hatch.build.targets.sdist]
include = [
  "/LICENSE.txt",
  "/README.md",
  "/assets",
  "/eval",
  "/src",
]
