[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "fastvggt"
version = "0.1.0"
description = "Python package for FastVGGT model code and evaluation utilities."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE.txt" }
authors = [
  { name = "FastVGGT contributors" },
]
dependencies = [
  "einops",
  "huggingface_hub",
  "matplotlib",
  "numpy",
  "Pillow",
  "safetensors",
  "torch>=2.3.1",
  "torchvision>=0.18.1",
  "tqdm",
]

[project.optional-dependencies]
eval = [
  "evo",
  "open3d",
  "opencv-python",
  "pyceres",
  "pycolmap",
  "PyYAML",
  "scikit-image",
  "scipy",
  "trimesh",
]

[project.urls]
Homepage = "https://github.com/mystorm16/FastVGGT"
Repository = "https://github.com/mystorm16/FastVGGT"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["merging", "merging.*", "vggt", "vggt.*"]
